--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ build_flags =
 ;  -DWIFI_CREDS_SSID='"SSID"'
 ;  -DWIFI_CREDS_PASSWD='"PASSWORD"'
 
+
 ; Enable -O2 GCC optimization
   -O2
 
@@ -51,3 +52,11 @@ board = esp12e
 ; [env:esp32]
 ; platform = espressif32
 ; board = esp32dev
+
+[env:esp32doit-devkit-v1]
+platform = espressif32
+;board = esp32dev
+board = esp32doit-devkit-v1
+framework = arduino
+;build_flags = -v
+monitor_speed = 115200
